--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -8,7 +8,9 @@
     <h1>
       {{ products.title }}
     </h1>
-    <h2>{{ products.category }}</h2>
+    <h2>{{ products.category}}</h2>
+    <h3>{{products.subCategory1}}</h3>
+    <h4>{{products.subCategory2}}</h4>
     <h3>{{ products.price | currency }}</h3>
 
     <div class="d-flex">
