--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -5,7 +5,7 @@
 	height: 30px;
 	padding: 0 5px;
 	font-size: 12px;
-	font-family: 'Inter';
+	font-family: 'Roboto', 'Inter', Sans Serif;
 	border: 0px;
 
 }
